--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
     <title>Dashboard</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sidebar"></div>
+        <div class="header">
+            <div class="nav-1"></div>
+            <div class="nav-2"></div>
+        </div>
+        <div class="main">
+            <div class="projects"></div>
+            <div class="meta">
+                <div class="announcements"></div>
+                <div class="trending"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
