Add main grid layout

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="sidebar"></div>
-        <div class="header">
+        <div id="sidebar"></div>
+        <div id="header">
             <div class="nav-1"></div>
             <div class="nav-2"></div>
         </div>
-        <div class="main">
+        <div id="main">
             <div class="projects"></div>
             <div class="meta">
                 <div class="announcements"></div>
